--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Test</title>
+        <link rel="stylesheet" href="stylesheet.css"
     </head>
     <body>
         <h1 class="title">Hello World</h1>
